execute with Java17